Upgrade to Java 21 applying virtual threads for DuckDB evaluator